# deep-trainer

./: .pylintrc  README.md  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: tests.yml
deep_trainer/: __init__.py  pytorch.py
deep_trainer/pytorch/: logging.py  metric.py  trainer.py
example/: example.py  requirements.txt  resnet.py
src/deep_trainer/: __init__.py  logging.py  metric.py  trainer.py
src/deep_trainer/pytorch/: logging.py  metric.py  trainer.py
tests/: test_logging.py  test_metric.py  test_trainer.py
