[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project]
name = "deep-trainer"
version = "0.1.7"
description = "Yet another simple & effective PyTorch trainer"
readme = "README.md"
authors = [
    { name = "Raphael Reme", email = "raphaelreme-dev@protonmail.com" }
]
maintainers = [
    { name = "Raphael Reme", email = "raphaelreme-dev@protonmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["PyTorch", "Training", "Evaluation", "Reproducibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.10"
dependencies = [
    "setuptools<82",  # to include pkg_resources for tensorboard...
    "tensorboard",  # TODO: Drop tensorboard dependency as it is not maintained for python>=3.12
    "torch>=2.3.0",
    "tqdm",
    "typing-extensions ; python_full_version < '3.12'",
]

[dependency-groups]
dev = [
    "mypy",
    "prek",
    "pytest",
    "pytest-cov",
    "ruff",
    "torch-resnet",
    "torchvision",
    "types-tqdm",
]


[project.urls]
Homepage = "https://github.com/raphaelreme/deep-trainer"
Documentation = "https://github.com/raphaelreme/deep-trainer"
Repository = "https://github.com/raphaelreme/deep-trainer"
Issues = "https://github.com/raphaelreme/deep-trainer/issues"


[tool.uv]
python-preference = "only-managed"


[tool.ruff]
line-length = 120
indent-width = 4


# Format
format.docstring-code-format = true
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "lf"
format.skip-magic-trailing-comma = false

# Lint
lint.select = ["ALL"]

lint.ignore = [
    "ANN001",  # Checked by mypy which allows default args not to be typed
    "COM812",  # Recommended by ruff as we use the formatter
    "D100",  # Module docstring
    "D107",  # __init__ docstring
    "EM", "TRY003",  # Let's rely on standard exceptions
    "FBT",  # Ignore boolean trap
    "FIX", "TD",  # Ignore TODO, FIXME, XXX
]


lint.future-annotations = true
lint.flake8-annotations.ignore-fully-untyped = true
lint.flake8-annotations.mypy-init-return = true
lint.pep8-naming.ignore-names = [
    "i",
    "j",
    "k",
    "n",
    "t",
    "X*",
    "Y*",
    "A",
    "B",
]
lint.pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["INP001", "D103", "S101", "ANN201", "SLF001", "T201", "ARG001"]
"example/*.py" = ["INP001", "D103", "S101", "ANN201", "SLF001", "T201", "NPY002", "ERA001"]


[tool.mypy]
enable_error_code = ["ignore-without-code"]
check_untyped_defs = true


# Test
[tool.pytest.ini_options]
strict = true

[tool.coverage.run]
source = ["deep_trainer"]

[tool.coverage.report]
exclude_also = [
    "if sys.version",
    "raise NotImplementedError",
]
