[metadata]
name = deep-trainer
version = attr: deep_trainer.__version__
author = Raphael Reme
author_email = raphaelreme-dev@protonmail.com
description = Helper to train deep neural networks
keywords = deep learning, pytorch
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raphaelreme/deep-trainer
project_urls =

classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6
install_requires =
    torch
    tqdm
include_package_data = False

[options.packages.find]
exclude=
    tests*
