[metadata]
name = deep-trainer
version = attr: deep_trainer.__version__
author = Raphael Reme
author_email = raphaelreme-dev@protonmail.com
description = Helper to train deep neural networks
keywords = deep learning, pytorch
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raphaelreme/deep-trainer
project_urls =

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
python_requires = >=3.9
install_requires =
    tensorboard
    torch>=2.3.0
    tqdm
include_package_data = False

[options.package_data]
* = py.typed

[options.packages.find]
exclude=
    tests*
